--- a/destinations.html
+++ b/destinations.html
@@ -30,65 +30,160 @@
             <h3 class="merriweather-bold">Paris</h3>
             <div>
                 <img src="Images/paris.jpg" alt="">
-                <p class="merriweather-regular">Destination touristique visitée chaque année par quelque dix millions de
-                    touristes étrangers, Paris
-                    possède un patrimoine architectural mondialement célèbre comme la cathédrale Notre-Dame de Paris, la
-                    tour Eiffel, le musée du Louvre ou encore l'Arc de Triomphe. De nombreux styles architecturaux sont
-                    représentés, du classicisme à l'architecture contemporaine en passant par l'Art nouveau.</p>
+                <p class="merriweather-regular">Paris est la capitale de la France et une
+                    collectivité à statut particulier. Divisée en vingt arrondissements, elle est le chef-lieu de la
+                    région Île-de-France et le siège de la métropole du Grand Paris. <br>
+
+                    Paris est situé au centre du Bassin parisien, sur une boucle de la Seine, entre les confluents avec
+                    la Marne et l'Oise. Le site est occupé à partir du IIIe siècle avant notre ère sous le nom Lutèce
+                    par le peuple gaulois des Parisii, qui donne son nom à la ville. Au début du VIe siècle, Clovis
+                    choisit Paris comme capitale de son royaume. Profitant de la fertilité agricole de son bassin
+                    alentour alliée au pouvoir institutionnel lui étant conféré, la cité devient alors une des
+                    principales villes de l'ancienne Gaule avec des palais royaux, de riches abbayes et une cathédrale.
+                    Au cours du Moyen Âge, elle s'impose comme un foyer intellectuel et artistique majeur avec la
+                    création de l'université de Paris. Son importance économique et politique ne cesse de croître, ce
+                    qui en fait l'une des villes les plus importantes de l'Occident médiéval. La montée en puissance de
+                    la monarchie française à partir du XVIe siècle - d'abord en Europe puis dans le monde - en fait une
+                    métropole au rayonnement planétaire, capitale d'un empire colonial jusqu'au XXe siècle. <br>
+
+                    Le paysage urbain parisien est facilement reconnaissable, caractérisé par de grands boulevards, des
+                    places dégagées et des immeubles d'un style spécifique appelé « haussmannien ». Il est le résultat
+                    de grands travaux d'urbanisme réalisés entre 1853 et 1870 sous le Second Empire, sous la houlette du
+                    baron Haussmann, qui ont profondément modifié la Capitale en lui donnant le visage qu'on lui connaît
+                    de nos jours, tout en laissant subsister des pans du tissu urbain antérieur. Au cours du XXe siècle,
+                    la physionomie de Paris a continué à se transformer avec la mise en service du métro parisien ainsi
+                    que la construction dans les arrondissements périphériques d'habitations à bon marché puis de tours
+                    et de barres d'immeubles. Le centre de la capitale a également été profondément rénové dans les
+                    années 1970 (avec le déménagement des Halles vers Rungis et la construction du Centre Pompidou)
+                    tandis que l'introduction de la voiture s'est concrétisée par l'aménagement du boulevard
+                    périphérique.</p>
             </div>
         </section>
         <section>
             <h3 class="merriweather-bold">Singapour</h3>
             <div>
                 <img src="Images/singapour.jpg" alt="">
-                <p class="merriweather-regular">Singapour est une juxtaposition de différentes cultures provenant de
-                    différentes ethnies : Chinois,
-                    Malais et Indiens. Chaque groupe est encouragé à maintenir ses traditions, tout en embrassant un
-                    mode
-                    de vie conformiste et moderne. Singapour est donc un lieu unique de paradoxes. Sur le plan des
-                    célébrations on peut voir un mariage chinois prendre place juste à côté d'un mariage malais. Il est
-                    également possible de participer à un ensemble de fêtes illustrant la variété d'origines des
-                    Singapouriens.</p>
+                <p class="merriweather-regular">Singapour, en forme longue la république de Singapour (en anglais :
+                    Singapore et Republic of Singapore, en chinois : 新加坡 (Xīnjiāpō) et 新加坡共和国 (Xīnjiāpō Gònghéguó), en
+                    malais : Singapura et Republik Singapura, en tamoul : சிங்கப்பூர் (Ciṅkappūr) et சிங்கப்பூர்
+                    குடியரசு (Ciṅkappūr Kudiyarasu)), est un pays d'Asie du Sud-Est. La superficie de cette cité-État
+                    est de 724,2 km2. Elle comprend 63 îles, dont la principale est Pulau Ujong (584,8 km2). Cette île
+                    est très densément urbanisée, mais la végétation luxuriante – même en plein centre-ville – a valu à
+                    Singapour le surnom de « ville jardin ». Cette abondance de verdure découle en partie d'un climat
+                    équatorial, uniformément chaud et orageux tout au long de l'année. Sa densité de population est la
+                    deuxième plus élevée au monde parmi les États indépendants (après Monaco). <br>
+
+                    Singapour est une cité-État autoritaire d'apparence démocratique. <br>
+
+                    L'État de Singapour est situé au sud de l'extrémité méridionale de la péninsule malaise, dont il est
+                    séparé au nord par le détroit de Johor. Il borde au sud le détroit de Singapour. Cet État est connu
+                    et souvent montré en exemple pour son extraordinaire réussite économique. Après l'indépendance de
+                    l'Empire britannique en 1958, le rattachement à la Malaisie en 1963, puis l'indépendance en 1965,
+                    Singapour a su devenir, avec très peu de ressources naturelles et des problèmes socio-économiques
+                    importants – émeutes raciales, chômage massif, difficultés de logement et d'accès à l'eau –, l'un
+                    des pays les plus développés et les plus prospères du monde, en matière d'économie, d'éducation, de
+                    santé, de sécurité et d'urbanisme. Cette prospérité repose toutefois en partie sur l'exploitation de
+                    la main d'œuvre immigrée (40 % de la population active) qui ne bénéficie généralement en rien de ces
+                    conditions de vie. La ville, cité souveraine, est un réduit chinois au cœur même du monde malais :
+                    la population est majoritairement composée de Chinois (74,3 %). De cette confrontation ethnique sont
+                    nés en partie les troubles qui ont accéléré son retrait de la Malaisie, le 9 août 1965.</p>
             </div>
         </section>
         <section>
             <h3 class="merriweather-bold">Cuzco</h3>
             <div>
                 <img src="Images/cuzco.jpg" alt="">
-                <p class="merriweather-regular">Malgré de récentes études archéologiques de la ville et des styles
-                    architecturaux qui la compose,
+                <p class="merriweather-regular">Qosqo fut la capitale de l'Empire inca (Tawantinsuyu). <br>
+
+                    Malgré de récentes études archéologiques de la ville et des styles architecturaux qui la compose,
                     suggérant ainsi une origine bien plus ancienne que celle des Incas, et donc une histoire plus
-                    profonde
-                    liée a d'autres civilisations ou cultures ayant fondé le lieu avant l'arrivée des Incas, la légende
-                    veut
-                    que la ville ait été fondée au XIe siècle ou au XIIe siècle par Manco Capac et Mama Ocllo après leur
-                    «
-                    naissance » dans le lac Titicaca. </p>
+                    profonde liée a d'autres civilisations ou cultures ayant fondé le lieu avant l'arrivée des Incas, la
+                    légende veut que la ville ait été fondée au XIe siècle ou au XIIe siècle par Manco Capac et Mama
+                    Ocllo après leur « naissance » dans le lac Titicaca. Avant l'arrivée des conquistadors, la ville
+                    était partagée en quatre quartiers, occupés par les Incas et des ressortissants des tribus de leur
+                    empire. Les principaux monuments dataient de l'Inca Pachacutec (ou Pachacuti), qui avait entrepris
+                    la rénovation et la reconstruction intégrale de la ville. <br>
+
+                    On peut encore admirer les murs incas originels dans certaines rues de la ville ou même le temple du
+                    Soleil, ou Coricancha, de nouveau révélé au monde après le tremblement de terre de 1950. En effet
+                    sur les fondations de ce temple avait été bâti le couvent Santo Domingo, fortement endommagé par le
+                    séisme. <br>
+
+                    La première description écrite de Cuzco est réalisée par Pedro Sánchez de la Hoz, secrétaire
+                    officiel du conquistador Francisco Pizarro. Le rapport de Sánchez survécut, publié en 1556 à Venise
+                    par l'entremise de Giovanni Battista Ramusio, il comprend une longue description de l’architecture
+                    et du plan de Cuzco10. C'est le premier texte substantiel sur l'architecture et le plan de la
+                    colonie inca, écrit par un participant à la conquête du Pérou, et qui y passa un temps considérable.
+                    Il fournit des détails remarquables sur un lieu dont l'infrastructure reste encore incomplètement
+                    connue aujourd'hui. Selon Sánchez, l’une des caractéristiques les plus remarquables de la ville
+                    était une place qu'il affirme « faite de forme carrée, et pour la plus grande part plate, et pavée
+                    de petites pierres ». Une gravure sur bois (possiblement de Giacomo Gastaldi) accompagnait la
+                    description lors de sa première publication à Venise en 1556, et qui alimentera l’imaginaire sur
+                    Cuzco pendant au moins deux siècles.</p>
             </div>
         </section>
         <section>
             <h3 class="merriweather-bold">Jouy-en-Josas</h3>
             <div>
                 <img src="Images/Jouy-en-Josas.jpg" alt="">
-                <p class="merriweather-regular">Jouy-en-Josas est une commune française située dans le département des
-                    Yvelines, en région Île-de-France.<br>Ses habitants sont appelés les « Jovaciens » et les «
-                    Jovaciennes
-                    ».</p>
+                <p class="merriweather-regular">Josas était le nom d'un des deux vici composant l'ancien pays de
+                    Hurepoix, l'autre étant au nord-est le pays de Châtres (pagus Castrensis), nommé actuellement
+                    Arpajon. C'était une circonscription ecclésiastique, l'un des trois (archidiaconats) de l'évêché de
+                    Paris, attestée sous les formes latinisée Archidiaconus Josiacensis en 1352 et française Josays en
+                    152518. Les deux autres archidiacres étaient ceux de Paris et de Brie, ils occupaient les premiers
+                    rang du chapitre de la cathédrale, après le doyen et le grand chantre. L'archidiaconat de Josas
+                    comprenait lui-même deux doyennés, celui de Châteaufort et celui de Montlhéry. <br>
+
+                    Diverses découvertes attestent une présence gallo-romaine en divers lieux de la commune dont le nom
+                    est celui du possesseur romain d'un domaine à l'époque de Dioclétien : Gaudiacum*, domaine de
+                    Gaudius15. Le vocable de l'église qui est Saint-Martin pourrait être la trace d'une fondation
+                    ancienne. La première mention écrite de Gaugiaco remontent au début du IXe siècle20, époque où cette
+                    terre dépendait de l'abbaye de Saint-Germain-des-Prés dont les moines ont procédé au défrichement
+                    des terres. Cette église avait un chapitre en 1784, date où il décide d'abattre une statue de saint
+                    Christophe. <br>
+
+                    Avec les guerres successives, la guerre de Cent Ans, puis la peste noire, la population fut
+                    progressivement anéantie et en 1466, la paroisse ne comptait plus que trois feux. À partir de cette
+                    date, Jouy devient une terre laïque dont la seigneurie sera donnée à diverses familles s'étant
+                    illustrées par leurs services rendus au roi.
+
+                </p>
             </div>
         </section>
         <section>
             <h3 class="merriweather-bold">Djenné</h3>
             <div>
                 <img src="Images/djenne.jpg" alt="">
-                <p class="merriweather-regular">Djenné est une ville et une commune malienne, chef-lieu cercle de
-                    Djenné,
-                    situé dans la région de Mopti, 574 km par la route de la capitale Bamako située à l'ouest. Djenné
-                    est à
-                    la charnière entre le monde nomade et le monde sédentaire. Elle est située à 130 km de Moptis, et à
-                    500
-                    km par voie fluviale de la ville caravanière de Tombouctou à laquelle elle est liée
-                    commercialement.Son
-                    nom signifie « génie des eaux » en Bambara.
+                <p class="merriweather-regular">
+                    La ville de Djenné a été construite à proximité de Djenné-Djenno à la fin du IXe siècle par des
+                    Bozos. Une légende raconte qu’une jeune fille nommée Tapama Kayantao, devenue Tapama Djenepo, "la
+                    martyre de Djénné", fut enfermée vivante dans un tombeau du mur d’enceinte de la ville, à la porte
+                    de Kanafa, où la tombe existe toujours, patrimoine mondial de l'humanité, géré par l'UNESCO, afin de
+                    protéger la cité et en assurer la prospérité (le génie des eaux qui donne son nom à la cité ferait
+                    s'écrouler les maisons de banco et le sacrifice de la demoiselle aurait permis d'ériger la ville).
+                    <br>
+
+                    En 1280, le roi Koi Komboro se convertit à l’islam et fait construire à Djenné sa prestigieuse
+                    mosquée. Au XIIIe siècle, la ville est intégrée à l’empire du Mali. <br>
+
+                    En 1443, elle est conquise par les Touaregs (bien que Djenné semble n'avoir pas connu de domination
+                    touareg) puis par l'Empire songhaï en 1470. En 1591, le sultan saadien du Maroc Ahmed el-Mansour
+                    s’empare de Djenné. En 1670, Djenné appartient au Royaume bambara de Ségou. <br>
+
+                    Djenné est conquise par Sékou Amadou (Empire peul du Macina) en 1819, puis par l’Empire toucouleur
+                    d’Oumar Tall en 1862 avant d’être prise par les troupes de Louis Archinard en 18933 lors de la
+                    pénétration coloniale française et intégrée au Soudan français. <br>
+
+                    Louis-Gustave Binger donne une longue description de la ville dans son récit Du Niger au golfe de
+                    Guinée (Hachette, 1892, p. 384-386). <br>
+
+                    La ville a été au cours de son histoire au cœur de l’expansion de l'islam en Afrique noire : Islam
+                    en Afrique. <br>
+
+                    Djenné a toujours été un carrefour pour le commerce transsaharien. Les marchandises en provenance du
+                    nord, notamment les bijoux et le sel gemme, s’échangeaient contre les produits du sud, les noix de
+                    cola, l’or et l’ivoire. De nos jours encore, le marché qui se tient chaque lundi est le plus
+                    important de la région. <br>
             </div>
         </section>
 
@@ -96,11 +191,28 @@
             <h3 class="merriweather-bold">Londres</h3>
             <div>
                 <img src="Images/londres.jpg" alt="">
-                <p class="merriweather-regular">Londres est considérée comme l'une des villes mondiales parmi les plus
-                    importantes. La ville exerce un impact considérable sur les arts, le commerce,
-                    l'éducation, le divertissement, la mode, les finances, les soins de santé, les médias, les services
-                    professionnels, la recherche et le développement, le tourisme et les transports. Londres se
-                    classe 26e sur 300 grandes villes pour ses performances économiques</p>
+                <p class="merriweather-regular">Londres est
+                    la capitale et plus grande ville d'Angleterre et du Royaume-Uni. La ville est située près de
+                    l'estuaire de la Tamise dans le sud-est de l'Angleterre. Londinium est fondée par les Romains il y a
+                    presque 2 000 ans. La Cité de Londres, le noyau historique de Londres avec une superficie de
+                    seulement 1,12 mile carré (2,9 km2) conserve des frontières qui suivent de près ses limites
+                    médiévales. Londres est gouvernée par le maire de Londres et l'Assemblée de Londres. <br>
+
+                    Londres est considérée comme l'une des villes mondiales parmi les plus importantes. La
+                    ville exerce un impact considérable sur les arts, le commerce, l'éducation, le divertissement, la
+                    mode, les finances, les soins de santé, les médias, les services professionnels, la recherche et le
+                    développement, le tourisme et les transports. Londres se classe 26e sur 300 grandes villes pour
+                    ses performances économiques. La City de Londres est l'un des plus grands centres financiers, elle
+                    est classée troisième en 2023 derrière New York et Shanghai et a le plus gros PIB urbain en
+                    Europe en 2017, estimé à 801,66 milliards d'euros19,20. En 2011 elle est la ville la plus visitée
+                    mesurée par les arrivées internationales21 et possède le système aéroportuaire le plus fréquenté par
+                    le trafic de passagers du monde en 202022. Elle est la première destination d'investissement en
+                    2017 et est la ville, en 2015, avec le plus de particuliers avec une situation nette au-dessus
+                    de 30 millions de dollars. Les 43 universités de Londres forment la plus grande concentration
+                    d'instituts d'enseignement supérieur en Europe26, et Londres abrite des institutions réputées comme
+                    l'Imperial College London en sciences naturelles et appliquées, la London School of Economics en
+                    sciences sociales. En 2012, Londres est devenue la première ville à avoir accueilli trois
+                    Jeux olympiques d'été modernes</p>
             </div>
         </section>
     </main>
